# solidaritytechtools

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: workflow.yml
examples/: migrate_notes.py
solidaritytechtools/: __init__.py
solidaritytechtools/client/: base_client.py  models.py
solidaritytechtools/json_export/: export.py  models.py
solidaritytechtools/match_persons/: match_persons.py
